Simplify hero section and update image source
Removed multiple language titles and subtitles for the hero section, retaining only English. Updated the hero media image source to a new URL.

--- a/index.html
+++ b/index.html
@@ -170,16 +170,10 @@
       <div class="hero-left">
         <div class="eyebrow">Premium • Personalized • Memorable</div>
         <h2 class="hero-title lang lang-en active">Luxury experiences in Cabo San Lucas</h2>
-        <h2 class="hero-title lang lang-es">Experiencias de lujo en Cabo San Lucas</h2>
-        <h2 class="hero-title lang lang-fr">Expériences de luxe à Cabo San Lucas</h2>
-        <h2 class="hero-title lang lang-pt">Experiências de luxo em Cabo San Lucas</h2>
-        <h2 class="hero-title lang lang-it">Esperienze di lusso a Cabo San Lucas</h2>
+      
 
         <p class="hero-sub lang lang-en active">Because unforgettable memories deserve a perfect setting. Private yachts, sunset proposals, VIP dinners and curated adventures — tailored to you.</p>
-        <p class="hero-sub lang lang-es">Porque los recuerdos inolvidables merecen un escenario perfecto. Yates privados, propuestas al atardecer, cenas VIP y aventuras a medida.</p>
-        <p class="hero-sub lang lang-fr">Parce que les souvenirs inoubliables méritent un cadre parfait. Yachts privés, demandes au coucher du soleil, dîners VIP et aventures sur mesure.</p>
-        <p class="hero-sub lang lang-pt">Porque memórias inesquecíveis merecem um cenário perfeito. Iates privados, pedidos ao pôr do sol, jantares VIP e aventuras sob medida.</p>
-        <p class="hero-sub lang lang-it">Perché i ricordi indimenticabili meritano un palcoscenico perfetto. Yacht privati, proposte al tramonto, cene VIP e avventure su misura.</p>
+        
 
         <div class="cta-row">
           <a class="primary-cta" href="https://wa.me/WA_NUMBER?text=Hi%2C%20I%27d%20like%20to%20plan%20a%20VIP%20experience%20in%20Cabo">Start Planning</a>
@@ -190,8 +184,8 @@
       <aside class="hero-media" aria-hidden="false">
         <!-- Replace this section with a tasteful hero image or short autoplay muted video (web-optimized MP4) -->
         <picture>
-          <source media="(min-width:801px)" srcset="/assets/hero-desktop.jpg">
-          <img src="/assets/hero-mobile.jpg" alt="Couple on a private yacht at sunset" style="width:100%;height:auto;display:block;border-radius:8px;">
+          <source media="(min-width:801px)" srcset="https://raw.githubusercontent.com/FerProducer/CaboMomentsVIP/refs/heads/main/Gemini_Generated_Image_d9a64pd9a64pd9a6.png">
+          <img src="https://raw.githubusercontent.com/FerProducer/CaboMomentsVIP/refs/heads/main/Gemini_Generated_Image_d9a64pd9a64pd9a6.png" alt="Couple on a private yacht at sunset" style="width:100%;height:auto;display:block;border-radius:8px;">
         </picture>
       </aside>
     </section>
