Update WhatsApp number and Open Graph image
Updated WhatsApp contact number and Open Graph image URL.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Open Graph / Social -->
   <meta property="og:title" content="Cabo Moments VIP — Luxury Experiences in Cabo" />
   <meta property="og:description" content="Private yachts, romantic proposals, VIP dinners and curated adventures in Cabo San Lucas. Personalized luxury experiences for unforgettable memories." />
-  <meta property="og:image" content="/assets/og-cabo-moments.jpg" />
+  <meta property="og:image" content="https://github.com/FerProducer/CaboMomentsVIP/blob/main/ChatGPT%20Image%2021%20oct%202025,%2005_11_57%20p.m..png?raw=true" />
   <meta property="og:url" content="https://www.cabomomentsvip.com/" />
   <meta property="og:site_name" content="Cabo Moments VIP" />
   <meta property="og:type" content="website" />
@@ -160,8 +160,8 @@
           <button class="lang-btn" data-lang="it">IT</button>
         </div>
 
-        <!-- Replace WA_NUMBER with your WhatsApp number (country code, no +, e.g. 5213312345678) -->
-        <a class="primary-cta" id="bookNow" href="https://wa.me/WA_NUMBER?text=Hi%2C%20I%27d%20like%20to%20plan%20a%20VIP%20experience%20in%20Cabo">Plan Your Experience</a>
+        <!-- Replace WA_NUMBER with your WhatsApp number (country code, no +, e.g. 526391342577) -->
+        <a class="primary-cta" id="bookNow" href="https://wa.me/526391342577?text=Hi%2C%20I%27d%20like%20to%20plan%20a%20VIP%20experience%20in%20Cabo">Plan Your Experience</a>
       </nav>
     </header>
 
@@ -176,7 +176,7 @@
         
 
         <div class="cta-row">
-          <a class="primary-cta" href="https://wa.me/WA_NUMBER?text=Hi%2C%20I%27d%20like%20to%20plan%20a%20VIP%20experience%20in%20Cabo">Start Planning</a>
+          <a class="primary-cta" href="https://wa.me/526391342577?text=Hi%2C%20I%27d%20like%20to%20plan%20a%20VIP%20experience%20in%20Cabo">Start Planning</a>
           <a class="secondary-cta" href="#experiences">View Signature Experiences</a>
         </div>
       </div>
@@ -284,7 +284,7 @@
 
             <div style="display:flex;gap:10px;margin-top:12px">
               <button class="submit" type="submit">Request quote</button>
-              <a class="secondary-cta" href="https://wa.me/WA_NUMBER?text=Hi%2C%20I%27d%20like%20to%20plan%20a%20VIP%20experience%20in%20Cabo">Message on WhatsApp</a>
+              <a class="secondary-cta" href="https://wa.me/526391342577?text=Hi%2C%20I%27d%20like%20to%20plan%20a%20VIP%20experience%20in%20Cabo">Message on WhatsApp</a>
             </div>
           </form>
 
@@ -326,7 +326,7 @@
   </div>
 
   <!-- Floating WhatsApp CTA (replace WA_NUMBER) -->
-  <a class="whatsapp" href="https://wa.me/WA_NUMBER?text=Hi%2C%20I%27d%20like%20a%20VIP%20experience%20quote" aria-label="Message us on WhatsApp">
+  <a class="whatsapp" href="https://wa.me/526391342577?text=Hi%2C%20I%27d%20like%20a%20VIP%20experience%20quote" aria-label="Message us on WhatsApp">
     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true" style="display:block">
       <path d="M20.52 3.48A11.93 11.93 0 0 0 12 0C5.37 0 .02 5.35.02 12a11.85 11.85 0 0 0 2.03 6.58L0 24l5.77-2.02A11.93 11.93 0 0 0 12 24c6.63 0 12-5.35 12-12 0-3.2-1.21-6.16-3.48-8.52z" fill="#25D366"/>
       <path d="M17.2 14.8c-.47-.23-2.78-1.37-3.2-1.53-.43-.16-.74-.23-1.05.23s-1.2 1.53-1.48 1.85c-.28.31-.56.35-1.04.12-.48-.23-2.03-.74-3.87-2.39-1.43-1.33-.77-2.09-.24-2.46.43-.31.95-.8 1.43-1.2.47-.4.62-.67.93-1.1.31-.43.16-.8-.07-1.03-.22-.22-1.05-2.53-1.44-3.47-.38-.92-.77-.8-1.05-.82-.28-.02-.6-.02-.93-.02-.32 0-.84.12-1.28.6-.44.48-1.68 1.65-1.68 4.01 0 2.36 1.72 4.64 1.96 4.97.24.33 3.38 5.17 8.19 7.24 4.81 2.07 4.81 1.38 5.68 1.29.87-.09 2.78-1.13 3.17-2.22.39-1.09.39-2.02.27-2.22-.12-.2-.43-.33-.9-.56z" fill="#fff"/>
@@ -342,7 +342,7 @@
     "name": "Cabo Moments VIP",
     "description": "Custom luxury experiences in Cabo San Lucas: private yachts, proposals, VIP dinners, private chefs and photography packages.",
     "url": "https://www.cabomomentsvip.com/",
-    "telephone": "+52WA_NUMBER",
+    "telephone": "+526391342577",
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Cabo San Lucas",
@@ -402,7 +402,7 @@
       const notes = encodeURIComponent(document.getElementById('notes').value || '');
       const message = `Hello, my name is ${name}. I would like a quote for: ${experience}. Date: ${date}. Notes: ${notes}. Email: ${email}`;
       // Replace WA_NUMBER in href with your actual number when deploying
-      const waNumber = 'WA_NUMBER';
+      const waNumber = '526391342577';
       const waUrl = `https://wa.me/${waNumber}?text=${message}`;
       document.getElementById('formNotice').style.display = 'block';
       setTimeout(()=> window.open(waUrl,'_blank'),600);
